[gd_scene load_steps=3 format=3 uid="uid://dofoyfamuf0xb"]

[ext_resource type="Script" uid="uid://bg7nb8uektr82" path="res://Scripts/PopupResultados.gd" id="1_ngtgt"]
[ext_resource type="Texture2D" uid="uid://b8oiunevhgyni" path="res://Assets/Sprites/Gemini_Generated_Image_rsmojwrsmojwrsmo-removebg-preview.png" id="2_o7mtw"]

[node name="PopupResultados" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ngtgt")

[node name="FondoOscuro" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="CartelUI" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 312.2
offset_top = 70.0
offset_right = 1287.7996
offset_bottom = 897.99976
texture = ExtResource("2_o7mtw")
region_rect = Rect2(6, 0, 536, 460)

[node name="VBoxContainer" type="VBoxContainer" parent="CartelUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.799988
offset_top = 45.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Titulo" type="Label" parent="CartelUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 48
text = "!Juego Terminado!"
horizontal_alignment = 1

[node name="LblPuntaje" type="Label" parent="CartelUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Puntaje Final: 0"
horizontal_alignment = 1

[node name="LblPrecision" type="Label" parent="CartelUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Precision: 0%"
horizontal_alignment = 1

[node name="LblDificultad" type="Label" parent="CartelUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Nueva Dificultad: Calculando..."
horizontal_alignment = 1

[node name="Botones" type="HBoxContainer" parent="CartelUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="BtnReintentar" type="Button" parent="CartelUI/VBoxContainer/Botones"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 32
text = "Intentar de nuevo"

[node name="BtnMenu" type="Button" parent="CartelUI/VBoxContainer/Botones"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 32
text = "Menu"

[node name="BtnLeaderboard" type="Button" parent="CartelUI/VBoxContainer/Botones"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 32
text = "Leaderboard"
